--- a/src/app/features/posts/posts.css
+++ b/src/app/features/posts/posts.css
@@ -360,3 +360,38 @@
   font-size: 0.75rem;
   color: #94a3b8;
 }
+
+/* ================= image upload ============  */
+.upload-zone.uploading {
+  border-style: solid;
+  border-color: #6366f1;
+  background: #f8fafc;
+  cursor: wait;
+}
+
+.upload-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* background: rgba(0, 0, 0, 0.4); */
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.spin {
+  animation: rotation 2s infinite linear;
+  
+}
+.spinner-border{
+  font-size: 10px !important;
+  height: 10px!important;
+  width: 10px!important;
+  color: rgba(0, 0, 0, 0.4)!important;
+}
+
+
+@keyframes rotation {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(359deg); }
+}
